<resources>
    <string name="app_name">QuixoteTask</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Create an Account</string>
    <string name="email">Email Address</string>
    <string name="email_or_phone">Email Address or Phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="already_user">Already a User?</string>
    <string name="username">User Name</string>
    <string name="welcome_username">Welcome UserName</string>
    <string name="_import">Import</string>
    <string name="save">Save</string>
    <string name="number">Number</string>
    <string name="logout">LogOut</string>
    <string name="new_contact">Add New Contact</string>
    <string name="add">Add Contact</string>
    <string name="import_contacts">Import/Select Contacts</string>
    <string name="home">Home</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="some_title">This is an example title</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_required">Image required</string>
</resources>